--- a/monaco.html
+++ b/monaco.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <style type="text/css">
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+    </style>
+    <meta charset="utf-8" />
+    <title>Lua Editor</title>
+</head>
+<body>
+    <div id="container" style="width:100%;height:100%;"></div>
+    <script src="vs/loader.js"></script>
+    <script type="text/javascript">
+        require.config({ paths: { 'vs': 'vs' } });
+
+        var editor;
+
+        require(['vs/editor/editor.main'], function () {
+            monaco.editor.defineTheme('custom-dark', {
+                base: 'vs-dark',
+                inherit: true,
+                rules: [
+                    { token: 'keyword', foreground: 'c586c0' }, // "local"
+                    { token: 'identifier', foreground: 'dcdcaa' }, // variables like workspace
+                    { token: 'string', foreground: 'ce9178' }, // strings
+                    { token: 'function', foreground: '4fc1ff' }, // print()
+                ]
+            });
+
+            editor = monaco.editor.create(document.getElementById('container'), {
+                value: [
+                    'print("hello world")',
+                    'local workspace'
+                ].join('\n'),
+                language: 'lua',
+                theme: "custom-dark",
+                folding: true,
+                scrollbar: {
+                    verticalHasArrows: true,
+                },
+                dragAndDrop: true,
+                links: false,
+                minimap: { enabled: false },
+                showFoldingControls: "always",
+                smoothScrolling: true,
+            });
+
+            window.onresize = function () {
+                editor.layout();
+            };
+        });
+    </script>
+</body>
+</html>
 
