--- a/monaco.html
+++ b/monaco.html
@@ -1,154 +1,125 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <style type="text/css">
-        html, body {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-        }
-    </style>
-    <meta charset="utf-8" />
-    <title>Lua Editor</title>
+  <meta charset="utf-8" />
+  <title>Lua Editor</title>
+  <style>
+    html, body {
+      width: 100%;
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+    #container {
+      width: 100%;
+      height: 100%;
+    }
+    /* Optional: styling for squiggly error underline */
+    .squiggly-error {
+      text-decoration: red wavy underline;
+    }
+  </style>
+  <!-- Load Monaco from CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.45.0/min/vs/loader.js"></script>
 </head>
 <body>
-    <div id="container" style="width:100%;height:100%;"></div>
+  <div id="container"></div>
 
-    <!-- Load Monaco from CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.45.0/min/vs/loader.js"></script>
+  <script>
+    window.addEventListener("DOMContentLoaded", () => {
+      require.config({ paths: { 'vs': 'https://cdn.jsdelivr.net/npm/monaco-editor@0.45.0/min/vs' } });
 
-    <script type="text/javascript">
-        require.config({ paths: { 'vs': 'https://cdn.jsdelivr.net/npm/monaco-editor@0.45.0/min/vs' } });
+      let editor;
+      let Proposals = [];
 
-        var editor;
-        var GetText, SetText, SetTheme, SetScroll, ShowErr, Refresh;
-        var SwitchMinimap, SwitchReadonly, SwitchRenderWhitespace, SwitchLinks,
-            SwitchLineHeight, SwitchFontSize, SwitchFolding, SwitchAutoIndent,
-            SwitchFontFamily, SwitchFontLigatures, AddIntellisense;
-
-        var Proposals = [];
-
-        require(['vs/editor/editor.main'], function () {
-            function getDependencyProposals() {
-                return Proposals;
-            }
-
-            monaco.languages.registerCompletionItemProvider('lua', {
-                provideCompletionItems: function (model, position) {
-                    return getDependencyProposals();
-                }
-            });
-
-            monaco.editor.defineTheme('net-theme-light', {
-                base: 'vs',
-                inherit: true,
-                rules: [
-                    { token: 'global', foreground: '000000' },
-                    { token: 'keyword', foreground: 'ff6a00' },
-                    { token: 'comment', foreground: '666666' },
-                    { token: 'number', foreground: 'ffc600' },
-                    { token: 'string', foreground: 'ff8c3a' },
-                ]
-            });
-
-            monaco.editor.defineTheme('net-theme-dark', {
-                base: 'vs-dark',
-                inherit: true,
-                rules: [
-                    { token: 'global', foreground: 'FFFFFF', fontStyle: "bold" },
-                    { token: 'keyword', foreground: 'ff6a00', fontStyle: "bold" },
-                    { token: 'comment', foreground: '666666' },
-                    { token: 'number', foreground: 'ffc600' },
-                    { token: 'string', foreground: 'ff8c3a' },
-                ]
-            });
-
-            editor = monaco.editor.create(document.getElementById('container'), {
-                value: [
-                    'print("Hello User, and welcome to Kitty.lol")'
-                ].join('\n'),
-                language: 'lua',
-                theme: "net-theme-dark",
-                folding: true,
-                scrollbar: {
-                    verticalHasArrows: true,
-                },
-                dragAndDrop: true,
-                links: false,
-                minimap: { enabled: false },
-                showFoldingControls: "always",
-                smoothScrolling: true,
-            });
-
-            window.onresize = function () {
-                editor.layout();
-            };
-
-            // === Your API functions stay intact ===
-            GetText = function () { return editor.getValue(); }
-            SetText = function (x) { editor.setValue(x); }
-            SetTheme = function (themeName) {
-                if (themeName == "Dark") monaco.editor.setTheme("net-theme-dark");
-                if (themeName == "Light") monaco.editor.setTheme("net-theme-light");
-            }
-            SwitchMinimap = function (flag) {
-                editor.updateOptions({ minimap: { enabled: flag } });
-            }
-            SwitchReadonly = function (flag) { editor.updateOptions({ readOnly: flag }); }
-            SwitchRenderWhitespace = function (op) { editor.updateOptions({ renderWhitespace: op }); }
-            SwitchLinks = function (flag) { editor.updateOptions({ links: flag }); }
-            SwitchLineHeight = function (num) { editor.updateOptions({ lineHeight: num }); }
-            SwitchFontSize = function (num) { editor.updateOptions({ fontSize: num }); }
-            SwitchFolding = function (flag) { editor.updateOptions({ folding: flag }); }
-            SwitchAutoIndent = function (flag) { editor.updateOptions({ autoIndent: flag }); }
-            SwitchFontFamily = function (name) { editor.updateOptions({ fontFamily: name }); }
-            SwitchFontLigatures = function (flag) { editor.updateOptions({ fontLigatures: flag }); }
-            ShowErr = function (line, column, endline, endcolumn, errMessage) {
-                editor.revealPositionInCenter({ lineNumber: line, column: column });
-                editor.deltaDecorations([], [
-                    {
-                        range: new monaco.Range(line, column, endline, endcolumn),
-                        options: {
-                            inlineClassName: 'squiggly-error',
-                            hoverMessage: { value: errMessage },
-                        },
-                    },
-                ]);
-            }
-            AddIntellisense = function (l, k, d, i) {
-                var t;
-                switch (k) {
-                    case "Class": t = monaco.languages.CompletionItemKind.Class; break;
-                    case "Color": t = monaco.languages.CompletionItemKind.Color; break;
-                    case "Constructor": t = monaco.languages.CompletionItemKind.Constructor; break;
-                    case "Enum": t = monaco.languages.CompletionItemKind.Enum; break;
-                    case "Field": t = monaco.languages.CompletionItemKind.Field; break;
-                    case "File": t = monaco.languages.CompletionItemKind.File; break;
-                    case "Folder": t = monaco.languages.CompletionItemKind.Folder; break;
-                    case "Function": t = monaco.languages.CompletionItemKind.Function; break;
-                    case "Interface": t = monaco.languages.CompletionItemKind.Interface; break;
-                    case "Keyword": t = monaco.languages.CompletionItemKind.Keyword; break;
-                    case "Method": t = monaco.languages.CompletionItemKind.Method; break;
-                    case "Module": t = monaco.languages.CompletionItemKind.Module; break;
-                    case "Property": t = monaco.languages.CompletionItemKind.Property; break;
-                    case "Reference": t = monaco.languages.CompletionItemKind.Reference; break;
-                    case "Snippet": t = monaco.languages.CompletionItemKind.Snippet; break;
-                    case "Text": t = monaco.languages.CompletionItemKind.Text; break;
-                    case "Unit": t = monaco.languages.CompletionItemKind.Unit; break;
-                    case "Value": t = monaco.languages.CompletionItemKind.Value; break;
-                    case "Variable": t = monaco.languages.CompletionItemKind.Variable; break;
-                }
-                Proposals.push({ label: l, kind: t, detail: d, insertText: i });
-            }
-            SetScroll = function (line) { editor.revealLineInCenter({ lineNumber: line }); }
-            Refresh = function () {
-                var text = GetText();
-                SetText("");
-                editor.trigger('keyboard', 'type', { text: text });
-            }
+      require(['vs/editor/editor.main'], function () {
+        // --- Completion provider ---
+        monaco.languages.registerCompletionItemProvider('lua', {
+          provideCompletionItems: () => Proposals
         });
-    </script>
+
+        // --- Themes ---
+        monaco.editor.defineTheme('net-theme-light', {
+          base: 'vs',
+          inherit: true,
+          rules: [
+            { token: 'global', foreground: '000000' },
+            { token: 'keyword', foreground: 'ff6a00' },
+            { token: 'comment', foreground: '666666' },
+            { token: 'number', foreground: 'ffc600' },
+            { token: 'string', foreground: 'ff8c3a' },
+          ]
+        });
+
+        monaco.editor.defineTheme('net-theme-dark', {
+          base: 'vs-dark',
+          inherit: true,
+          rules: [
+            { token: 'global', foreground: 'FFFFFF', fontStyle: "bold" },
+            { token: 'keyword', foreground: 'ff6a00', fontStyle: "bold" },
+            { token: 'comment', foreground: '666666' },
+            { token: 'number', foreground: 'ffc600' },
+            { token: 'string', foreground: 'ff8c3a' },
+          ]
+        });
+
+        // --- Create editor ---
+        editor = monaco.editor.create(document.getElementById('container'), {
+          value: 'print("Hello User, and welcome to Kitty.lol")',
+          language: 'lua',
+          theme: 'net-theme-dark',
+          folding: true,
+          scrollbar: { verticalHasArrows: true },
+          dragAndDrop: true,
+          links: false,
+          minimap: { enabled: false },
+          showFoldingControls: "always",
+          smoothScrolling: true,
+        });
+
+        window.addEventListener("resize", () => editor.layout());
+
+        // === Your API functions still work ===
+        window.GetText = () => editor.getValue();
+        window.SetText = (x) => editor.setValue(x);
+        window.SetTheme = (themeName) => {
+          if (themeName === "Dark") monaco.editor.setTheme("net-theme-dark");
+          if (themeName === "Light") monaco.editor.setTheme("net-theme-light");
+        };
+        window.SwitchMinimap = (flag) => editor.updateOptions({ minimap: { enabled: flag } });
+        window.SwitchReadonly = (flag) => editor.updateOptions({ readOnly: flag });
+        window.SwitchRenderWhitespace = (op) => editor.updateOptions({ renderWhitespace: op });
+        window.SwitchLinks = (flag) => editor.updateOptions({ links: flag });
+        window.SwitchLineHeight = (num) => editor.updateOptions({ lineHeight: num });
+        window.SwitchFontSize = (num) => editor.updateOptions({ fontSize: num });
+        window.SwitchFolding = (flag) => editor.updateOptions({ folding: flag });
+        window.SwitchAutoIndent = (flag) => editor.updateOptions({ autoIndent: flag });
+        window.SwitchFontFamily = (name) => editor.updateOptions({ fontFamily: name });
+        window.SwitchFontLigatures = (flag) => editor.updateOptions({ fontLigatures: flag });
+        window.ShowErr = (line, column, endline, endcolumn, errMessage) => {
+          editor.revealPositionInCenter({ lineNumber: line, column: column });
+          editor.deltaDecorations([], [{
+            range: new monaco.Range(line, column, endline, endcolumn),
+            options: {
+              inlineClassName: 'squiggly-error',
+              hoverMessage: { value: errMessage },
+            },
+          }]);
+        };
+        window.AddIntellisense = (l, k, d, i) => {
+          let kindMap = monaco.languages.CompletionItemKind;
+          let t = kindMap[k] || kindMap.Text;
+          Proposals.push({ label: l, kind: t, detail: d, insertText: i });
+        };
+        window.SetScroll = (line) => editor.revealLineInCenter({ lineNumber: line });
+        window.Refresh = () => {
+          let text = editor.getValue();
+          editor.setValue("");
+          editor.trigger('keyboard', 'type', { text });
+        };
+      });
+    });
+  </script>
 </body>
 </html>
