--- a/monaco.html
+++ b/monaco.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Celestia - Monaco Code Editor</title>
-  <link rel="stylesheet" href="styles.css">
 
-  <!-- Monaco Loader -->
+  <!-- Monaco Loader from CDN -->
   <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.45.0/min/vs/loader.js"></script>
 
   <style>
@@ -14,7 +13,7 @@
       height: 100%;
       margin: 0;
       padding: 0;
-      background: #1e1e1e; /* match old editor dark theme */
+      background: #1e1e1e;
       font-family: sans-serif;
       color: #ccc;
     }
@@ -25,156 +24,75 @@
       flex-direction: column;
     }
 
-    #editor-container {
-      flex: 1;
-      border-top: 1px solid #333;
-    }
-
-    /* Tab styling */
+    /* Top tab bar */
     #tab-bar {
+      display: flex;
+      align-items: center;
       background: #252526;
       border-bottom: 1px solid #333;
-      color: #ccc;
-      font-size: 14px;
+      padding: 4px;
+    }
+
+    #tabs-container {
+      display: flex;
+      gap: 4px;
+      flex: 1;
+    }
+
+    .tab {
+      background: #2d2d2d;
+      padding: 4px 10px;
+      border-radius: 4px 4px 0 0;
+      cursor: pointer;
+      font-size: 13px;
+      user-select: none;
+    }
+
+    .tab.active {
+      background: #1e1e1e;
+      border: 1px solid #333;
+      border-bottom: none;
     }
 
     .add-tab-button {
-      margin-left: auto;
       background: transparent;
       border: none;
       cursor: pointer;
       color: #ccc;
-      padding: 4px;
-      display: flex;
-      align-items: center;
+      font-size: 18px;
+      padding: 0 6px;
     }
 
-    /* Dialog */
-    .dialog-overlay {
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.5);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .dialog-content {
-      background: #2d2d2d;
-      padding: 1rem;
-      border-radius: 8px;
-      width: 300px;
-    }
-    .dialog-input {
-      width: 100%;
-      padding: 6px;
-      margin: 8px 0;
-      background: #1e1e1e;
-      border: 1px solid #555;
-      color: #ccc;
-    }
-    .dialog-button {
-      padding: 6px 12px;
-      border: none;
-      cursor: pointer;
-      margin: 4px;
-    }
-    .dialog-button.primary {
-      background: #007acc;
-      color: white;
-    }
-    .dialog-button.secondary {
-      background: #444;
-      color: white;
-    }
-
-    /* Context menu */
-    .context-menu {
-      position: absolute;
-      background: #2d2d2d;
-      border: 1px solid #444;
-      border-radius: 4px;
-      z-index: 999;
-    }
-    .context-menu-item {
-      padding: 6px 10px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      gap: 6px;
-      color: #ccc;
-    }
-    .context-menu-item:hover {
-      background: #3c3c3c;
-    }
-
-    /* Error underline */
-    .squiggly-error {
-      text-decoration: red wavy underline;
+    /* Editor container */
+    #editor-container {
+      flex: 1;
     }
   </style>
 </head>
 <body>
   <div id="app">
-
     <!-- Tabs -->
-    <div id="tab-bar" class="flex items-center min-h-[40px] px-2 pt-2">
-      <div id="tabs-container" class="flex items-center gap-1"></div>
-      <button id="add-tab-btn" class="add-tab-button">
-        <svg width="16" height="16" viewBox="0 0 24 24" fill="none"
-             stroke="currentColor" stroke-width="2">
-          <line x1="12" y1="5" x2="12" y2="19"></line>
-          <line x1="5" y1="12" x2="19" y2="12"></line>
-        </svg>
-      </button>
+    <div id="tab-bar">
+      <div id="tabs-container"></div>
+      <button id="add-tab-btn" class="add-tab-button">+</button>
     </div>
 
     <!-- Monaco editor -->
     <div id="editor-container"></div>
   </div>
 
-  <!-- Rename Dialog -->
-  <div id="rename-dialog" class="dialog-overlay hidden">
-    <div class="dialog-content">
-      <div class="dialog-header">
-        <h3>Rename File</h3>
-      </div>
-      <input type="text" id="rename-input" placeholder="Enter new file name" class="dialog-input">
-      <div class="dialog-footer">
-        <button id="cancel-rename" class="dialog-button secondary">Cancel</button>
-        <button id="confirm-rename" class="dialog-button primary">Rename</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- Context Menu -->
-  <div id="context-menu" class="context-menu hidden">
-    <div class="context-menu-item" data-action="rename">
-      <svg width="16" height="16" viewBox="0 0 24 24" fill="none"
-           stroke="currentColor" stroke-width="2">
-        <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
-        <path d="m18.5 2.5 a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
-      </svg>
-      Rename
-    </div>
-    <div class="context-menu-item" data-action="save">
-      <svg width="16" height="16" viewBox="0 0 24 24" fill="none"
-           stroke="currentColor" stroke-width="2">
-        <path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"></path>
-        <polyline points="17,21 17,13 7,13 7,21"></polyline>
-        <polyline points="7,3 7,8 15,8"></polyline>
-      </svg>
-      Save
-    </div>
-  </div>
-
   <script>
+    let editor;
+    let tabs = [];
+    let currentTabIndex = -1;
+
     window.addEventListener("DOMContentLoaded", () => {
       require.config({
         paths: { vs: "https://cdn.jsdelivr.net/npm/monaco-editor@0.45.0/min/vs" }
       });
 
       require(["vs/editor/editor.main"], function () {
-        // Define old-style custom dark theme
+        // Custom dark theme
         monaco.editor.defineTheme("net-theme-dark", {
           base: "vs-dark",
           inherit: true,
@@ -187,24 +105,54 @@
           ]
         });
 
-        // Init editor
-        const editor = monaco.editor.create(document.getElementById("editor-container"), {
-          value: 'print("Hello User, and welcome to Celestia!")',
+        // Initialize editor
+        editor = monaco.editor.create(document.getElementById("editor-container"), {
+          value: "",
           language: "lua",
           theme: "net-theme-dark",
           automaticLayout: true,
-          folding: true,
           minimap: { enabled: false },
           smoothScrolling: true,
-          scrollbar: { verticalHasArrows: true },
         });
 
-        // Example API functions (optional)
-        window.GetText = () => editor.getValue();
-        window.SetText = (x) => editor.setValue(x);
-        window.SetTheme = (name) => monaco.editor.setTheme(name);
+        // Add the first tab automatically
+        addTab("main.lua", 'print("Hello User, and welcome to Celestia!")');
+
+        // Add new tab button
+        document.getElementById("add-tab-btn").addEventListener("click", () => {
+          const name = "untitled" + (tabs.length + 1) + ".lua";
+          addTab(name, "-- New file");
+        });
       });
     });
+
+    function addTab(name, content) {
+      const tabIndex = tabs.length;
+      tabs.push({ name, content });
+
+      const tabEl = document.createElement("div");
+      tabEl.className = "tab";
+      tabEl.textContent = name;
+      tabEl.addEventListener("click", () => switchTab(tabIndex));
+      document.getElementById("tabs-container").appendChild(tabEl);
+
+      switchTab(tabIndex);
+    }
+
+    function switchTab(index) {
+      if (currentTabIndex >= 0) {
+        // Save current editor content
+        tabs[currentTabIndex].content = editor.getValue();
+        // Deactivate old tab
+        document.getElementsByClassName("tab")[currentTabIndex].classList.remove("active");
+      }
+
+      // Switch to new tab
+      currentTabIndex = index;
+      const tabData = tabs[index];
+      editor.setValue(tabData.content);
+      document.getElementsByClassName("tab")[index].classList.add("active");
+    }
   </script>
 </body>
 </html>
