--- a/monaco.html
+++ b/monaco.html
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Celestia - Monaco Code Editor</title>
-
+  <meta charset="UTF-8" />
+  <title>Celestia - Monaco Editor</title>
   <script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.45.0/min/vs/loader.js"></script>
-
   <style>
     html, body {
-      height: 100%;
       margin: 0;
-      padding: 0;
+      height: 100%;
       background: rgb(17,17,17);
       font-family: sans-serif;
       color: #ccc;
     }
-
     #app {
-      height: 100%;
       display: flex;
       flex-direction: column;
+      height: 100%;
     }
-
     #tab-bar {
       display: flex;
       align-items: center;
@@ -30,40 +24,36 @@
       border-bottom: 1px solid #333;
       padding: 4px;
     }
-
     #tabs-container {
       display: flex;
       gap: 4px;
       flex: 1;
     }
-
     .tab {
       background: rgb(45,45,45);
       padding: 4px 10px;
       border-radius: 4px 4px 0 0;
       cursor: pointer;
       font-size: 13px;
-      user-select: none;
       display: flex;
       align-items: center;
       gap: 6px;
       border: 1px solid #333;
       border-bottom: none;
+      user-select: none;
+      color: #ccc;
     }
-
     .tab.active {
       background: #1e1e1e;
     }
-
     .tab .close-btn {
-      color: #aaa;
-      font-weight: bold;
       cursor: pointer;
+      color: #888;
+      font-weight: bold;
     }
     .tab .close-btn:hover {
       color: #fff;
     }
-
     .add-tab-button {
       background: transparent;
       border: none;
@@ -72,7 +62,6 @@
       font-size: 18px;
       padding: 0 6px;
     }
-
     #editor-container {
       flex: 1;
     }
@@ -90,94 +79,71 @@
   <script>
     let editor;
     let tabs = [];
-    let currentTabIndex = -1;
+    let currentTabIndex = 0;
 
-    // Initialize Monaco after DOM ready
-    window.addEventListener("DOMContentLoaded", () => {
-      require.config({
-        paths: { vs: "https://cdn.jsdelivr.net/npm/monaco-editor@0.45.0/min/vs" }
+    // Create editor once Monaco is loaded
+    require.config({ paths: { vs: "https://cdn.jsdelivr.net/npm/monaco-editor@0.45.0/min/vs" } });
+    require(["vs/editor/editor.main"], function () {
+      editor = monaco.editor.create(document.getElementById("editor-container"), {
+        value: "",
+        language: "lua",
+        theme: "vs-dark",
+        automaticLayout: true,
+        minimap: { enabled: false },
+        cursorBlinking: "smooth"
       });
 
-      require(["vs/editor/editor.main"], function () {
-        monaco.editor.defineTheme("celestia-dark", {
-          base: "vs-dark",
-          inherit: true,
-          rules: [
-            { token: "keyword", foreground: "ff6a00", fontStyle: "bold" },
-            { token: "comment", foreground: "666666" },
-            { token: "number", foreground: "ffc600" },
-            { token: "string", foreground: "ff8c3a" },
-          ]
-        });
+      // Start with one tab
+      tabs.push({ name: "Tab 1", content: 'print("Hello User, and welcome to Celestia!")' });
+      renderTabs();
+      switchTab(0);
 
-        editor = monaco.editor.create(document.getElementById("editor-container"), {
-          value: "",
-          language: "lua",
-          theme: "celestia-dark",
-          automaticLayout: true,
-          minimap: { enabled: false },
-          cursorBlinking: "smooth",
-        });
-
-        // Create first tab right away
-        addTab("Tab 1", 'print("Hello User, and welcome to Celestia!")');
-
-        // Hook up + button
-        document.getElementById("add-tab-btn").addEventListener("click", () => {
-          const name = "Tab " + (tabs.length + 1);
-          addTab(name, "-- New file");
-        });
+      document.getElementById("add-tab-btn").addEventListener("click", () => {
+        tabs.push({ name: "Tab " + (tabs.length + 1), content: "-- New file" });
+        renderTabs();
+        switchTab(tabs.length - 1);
       });
     });
 
-    function addTab(name, content) {
-      const tabIndex = tabs.length;
-      tabs.push({ name, content });
+    function renderTabs() {
+      const container = document.getElementById("tabs-container");
+      container.innerHTML = "";
+      tabs.forEach((tab, i) => {
+        const el = document.createElement("div");
+        el.className = "tab" + (i === currentTabIndex ? " active" : "");
+        el.innerHTML = `<span>${tab.name}</span><span class="close-btn">×</span>`;
 
-      const tabEl = document.createElement("div");
-      tabEl.className = "tab";
-      tabEl.innerHTML = `<span class="tab-title">${name}</span> <span class="close-btn">×</span>`;
+        // Click to switch
+        el.querySelector("span").addEventListener("click", () => switchTab(i));
+        // Close button
+        el.querySelector(".close-btn").addEventListener("click", (e) => {
+          e.stopPropagation();
+          closeTab(i);
+        });
 
-      tabEl.querySelector(".tab-title").addEventListener("click", () => switchTab(tabIndex));
-      tabEl.querySelector(".close-btn").addEventListener("click", (e) => {
-        e.stopPropagation();
-        closeTab(tabIndex);
+        container.appendChild(el);
       });
-
-      document.getElementById("tabs-container").appendChild(tabEl);
-      switchTab(tabIndex);
     }
 
     function switchTab(index) {
-      if (currentTabIndex >= 0 && tabs[currentTabIndex]) {
+      if (tabs[currentTabIndex]) {
         tabs[currentTabIndex].content = editor.getValue();
-        document.getElementsByClassName("tab")[currentTabIndex].classList.remove("active");
       }
-
       currentTabIndex = index;
       editor.setValue(tabs[index].content);
-      document.getElementsByClassName("tab")[index].classList.add("active");
+      renderTabs();
     }
 
     function closeTab(index) {
-      if (tabs.length === 1) return; // Keep one tab open
-
-      if (index === currentTabIndex) {
-        tabs[index].content = editor.getValue();
-      }
-
+      if (tabs.length === 1) return; // never close the last tab
+      tabs[index].content = editor.getValue();
       tabs.splice(index, 1);
-      document.getElementsByClassName("tab")[index].remove();
 
-      // Renumber
-      Array.from(document.getElementsByClassName("tab-title")).forEach((el, i) => {
-        tabs[i].name = "Tab " + (i + 1);
-        el.textContent = tabs[i].name;
-      });
-
-      let newIndex = index;
-      if (newIndex >= tabs.length) newIndex = tabs.length - 1;
-      switchTab(newIndex);
+      if (currentTabIndex >= index) {
+        currentTabIndex = Math.max(0, currentTabIndex - 1);
+      }
+      renderTabs();
+      switchTab(currentTabIndex);
     }
   </script>
 </body>
