--- a/monaco.html
+++ b/monaco.html
@@ -29,20 +29,21 @@
       overflow-x: auto;
     }
     .tab {
-      background: rgb(45, 45, 45);
+      background: rgb(30, 30, 30);
       padding: 6px 12px;
       margin-right: 4px;
       border-radius: 6px 6px 0 0;
       cursor: pointer;
       user-select: none;
       white-space: nowrap;
+      transition: background 0.2s;
     }
     .tab.active {
-      background: rgb(70, 70, 70);
+      background: rgb(50, 50, 50);
       font-weight: bold;
     }
     #add-tab {
-      background: rgb(45, 45, 45);
+      background: rgb(30, 30, 30);
       color: white;
       border: none;
       border-radius: 6px;
@@ -50,6 +51,10 @@
       height: 28px;
       cursor: pointer;
       margin-left: 4px;
+    }
+    #add-tab:disabled {
+      opacity: 0.4;
+      cursor: not-allowed;
     }
     #editor-container {
       height: calc(100% - 40px);
@@ -86,6 +91,9 @@
           tabEl.onclick = () => switchTab(i);
           tabsContainer.appendChild(tabEl);
         });
+
+        // disable add button at max
+        document.getElementById("add-tab").disabled = tabs.length >= MAX_TABS;
       }
 
       function switchTab(index) {
@@ -96,10 +104,7 @@
       }
 
       function addTab(name = `Tab ${tabs.length + 1}`) {
-        if (tabs.length >= MAX_TABS) {
-          alert("Maximum of " + MAX_TABS + " tabs reached.");
-          return;
-        }
+        if (tabs.length >= MAX_TABS) return;
         const model = createEditorModel("// Start coding here...");
         tabs.push({ name, model });
         switchTab(tabs.length - 1);
