--- a/monaco.html
+++ b/monaco.html
@@ -115,6 +115,11 @@
         automaticLayout: true,
         smoothScrolling: true,
         fontSize: 14,
+        cursorSmoothCaretAnimation: true,   // ✅ smooth cursor
+        minimap: {
+          enabled: true,
+          side: "right"                    // ✅ minimap on right
+        }
       });
 
       // Start with 1 tab
